Add information and footer section and apply styling

--- a/index.html
+++ b/index.html
@@ -24,11 +24,65 @@
                 <div class="hero-subtext">
                     This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.
                 </div>
+                <button type="button">Sign Up</button>
             </div>
             <div class="hero-img">
                 <div>this is a placeholder for an image.</div>
             </div>
         </div>
+        <div class="information">
+            <div class="information-header">
+                Some random information.
+            </div>
+            <div class="information-container">
+                <div class="information-item">
+                    <div class="information-illustration"></div>
+                    <div class="information-subtext">
+                        this is some subtext under an illustration or image
+                    </div>
+                </div>
+                <div class="information-item">
+                    <div class="information-illustration"></div>
+                    <div class="information-subtext">
+                        this is some subtext under an illustration or image
+                    </div>
+                </div>
+                <div class="information-item">
+                    <div class="information-illustration"></div>
+                    <div class="information-subtext">
+                        this is some subtext under an illustration or image
+                    </div>
+                </div>
+                <div class="information-item">
+                    <div class="information-illustration"></div>
+                    <div class="information-subtext">
+                        this is some subtext under an illustration or image
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="quote">
+            <div class="quote-text">
+                This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+            </div>
+            <div class="quote-signature">
+                -Thor, God of Thunder
+            </div>
+        </div>
+        <div class="calltoaction">
+            <div class="calltoaction-field">
+                <div class="calltoaction-text">
+                    <div class="calltoaction-headline">
+                        Call to action! It's time!
+                    </div>
+                    <div class="calltoaction-subtext">
+                        Sign up for our product by clicking that button right over there!
+                    </div>
+            </div>
+                <button type="button">Sign Up</button>
+        </div>
+        </div>
+        <div class="footer"> Copyright &#169; Clonky</div>
 
     </body>
 </html>
